<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:background="@color/bg_black"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <!--图片裁剪    ImageCropActivity-->
    <LinearLayout
        android:layout_margin="20dp"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1">
        <com.lanhuawei.beautyproject.imageHandle.crop.CropImageView
            android:id="@+id/CropImageView"
            android:adjustViewBounds="true"
            android:scaleType="centerInside"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_control"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@color/color_4e4e4e"
        android:gravity="center_vertical">
        <TextView
            android:id="@+id/tv_freedom"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="9dp"
            android:gravity="center"
            android:text="@string/freedom"
            android:textColor="@color/color_ff507f"
            android:drawableTop="@mipmap/freedom_select_icon"
            android:textSize="13sp"
            />
        <TextView
            android:id="@+id/tv_one_than_one"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="9dp"
            android:drawableTop="@mipmap/one_one_icon"
            android:gravity="center"
            android:text="1 : 1"
            android:textColor="@color/bg_white"
            android:textSize="13sp"/>
        <TextView
            android:id="@+id/tv_third_than_fourth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="9dp"
            android:drawableTop="@mipmap/third_fourth_icon"
            android:gravity="center"
            android:text="3 : 4"
            android:textColor="@color/bg_white"
            android:textSize="13sp"/>
        <TextView
            android:id="@+id/tv_fourth_than_third"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="9dp"
            android:drawableTop="@mipmap/fourth_third_icon"
            android:gravity="center"
            android:text="4 : 3"
            android:textColor="@color/bg_white"
            android:textSize="13sp"/>
    </LinearLayout>
    <RelativeLayout
        android:id="@+id/rl_bottom"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >
        <TextView
            android:id="@+id/tv_cancel"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="15dp"
            android:paddingEnd="20dp"
            android:text="@string/cancel"
            android:textColor="@color/bg_white"
            android:textSize="18sp"/>
        <TextView
            android:id="@+id/tv_rest"
            android:layout_centerInParent="true"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="15dp"
            android:paddingEnd="20dp"
            android:text="@string/rest"
            android:textColor="@color/bg_white"
            android:textSize="18sp"
            android:visibility="gone"/>
        <TextView
            android:id="@+id/tv_confirm"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentEnd="true"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="15dp"
            android:text="@string/finish"
            android:textColor="@color/bg_white"
            android:textSize="18sp"/>
    </RelativeLayout>

</LinearLayout>